fixes mobile spacing issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -135,7 +135,7 @@ ul {
 	padding: 0.3rem;
 	width: 400px;
 	position: relative;
-	top: -2.5rem;
+	top: -0.5rem;
 }
 
 .homecdimg {
@@ -144,7 +144,7 @@ ul {
 	padding: 0.3rem;
 	width: 400px;
 	position: relative;
-	top: -2.5rem;
+	top: -0.5rem;
 }
 
 .homedvdimg {
@@ -153,7 +153,7 @@ ul {
 	padding: 0.3rem;
 	width: 400px;
 	position: relative;
-	top: -2.5rem;
+	top: -0.5rem;
 }
 
 .buyselltradeimg {
@@ -162,7 +162,7 @@ ul {
 	padding: 0.3rem;
 	width: 400px;
 	position: relative;
-	top: -2.5rem;
+	top: -0.5rem;
 }
 
 .connectimg {
@@ -171,7 +171,7 @@ ul {
 	padding: 0.3rem;
 	width: 400px;
 	position: relative;
-	top: -2.5rem;
+	top: -0.5rem;
 }
 
 ul {
@@ -720,7 +720,7 @@ li a:hover {
 		margin-right: auto;
 		position: relative;
 		top: -5rem;
-		grid-area: record
+		grid-area: record;
 	}
 	
 	.homecdimgdesktop {
